Fixed banner position and moved it out of screen div.

--- a/css/base.css
+++ b/css/base.css
@@ -90,20 +90,31 @@ footer a {
 .input{
 	display: none;
 }
+#tipContainer{
+  position: absolute;
+  width: 320px;
+  height: 50px;
+  top:50%;
+  left:50%;
+  -webkit-transform: translate3d(-50%,-50%,0);
+  margin-top: -276px;
+  overflow: hidden;
+  pointer-events:none;
+  z-index: 1000;
+
+}
 #tips{
-  	width: 311px;
+  top:100px;
+  margin-top: -99px;
+  width: 311px;
   	/*line-height: 18px;*/
-  	background-color: #21b9b0;
-  	-webkit-transform: translate(-50%);
-  	padding: 5px;
+  background-color: #21b9b0;
+  padding: 5px;
 	padding-right: 4px;
-	padding-bottom: 0;
+	padding-bottom: 3px;
 	height: 27px;
-	position: relative;
-	display: none;
-	-webkit-transform: translate3d(0,0,0);
-	position: fixed;
-	z-index: 1000;
+  display: none;
+	position: absolute;
 }
 #helpinfo{
   	position: relative;
@@ -174,6 +185,7 @@ footer a {
     background-color: #54606e;
     overflow-y: scroll;
     z-index: 1;
+    opacity: 0;
 }
 .iconList::-webkit-scrollbar-track {
     background-color: transparent;
